src/test/deca/syntax/invalid/25_class_field_mal_defini.deca
// Description:
//    Test d'une attribut de class mal défini
//
// Resultats:
//    Ligne 11
//
// Historique:
//    cree le 01/01/2023

class A extends B {
    x;

}